--- a/nav-bar02/styles/style.scss
+++ b/nav-bar02/styles/style.scss
@@ -5,17 +5,10 @@ $header3: 2rem;
 $header4: 1.7rem;
 $text: 1.5rem;
 
-$text-a-color: #333;
-$text-primary-color: #f7c08a;
-$text-color: #fff;
-$text-border-color: #ddd;
-
-$background-button-color: #333;
-$background-button-hover-color: #f7c08a;
-$background-light-color: #f4f4f4;
-$background-body-color: #344a72;
-$background-form-color: #fff;
-$background-footer-color: #444;
+$light-color: #fff;
+$mid-light-color: #f7c08a;
+$mid-color: #444;
+$mid-dark-color: #0a1d42;
 
 $body-font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 
