--- a/nav-bar02/styles/_mobile.scss
+++ b/nav-bar02/styles/_mobile.scss
@@ -1,10 +1,17 @@
+// +++++++++++++++++++++++++++++++++++++++++
+// Mobile
+// +++++++++++++++++++++++++++++++++++++++++
 // Smartphones & Tablet
 @media screen and (max-width: 800px) {
   html {
     font-size: 50%;
   }
 
-  #navbar {
+  .main-head {
+    width: 100%;
+  }
+
+  nav {
     .logo {
       @include flex(center, center, column);
       flex: 1 1 20rem;
