--- a/burger-menu01/styles/_mobile.scss
+++ b/burger-menu01/styles/_mobile.scss
@@ -1,7 +1,16 @@
 // ++++++++++++++++++++++++++++++++++++++++++++++
 // Mobile
 // ++++++++++++++++++++++++++++++++++++++++++++++
+// Smartphones & Tablet
 @media screen and (max-width: 800px) {
+  html {
+    font-size: 50%;
+  }
+
+  .main-head {
+    width: 100%;
+  }
+
   .burger {
     position: relative;
     display: block;
@@ -20,7 +29,7 @@
     width: 100%;
     height: 50%;
     position: fixed;
-    top: 7rem;
+    top: 8.3rem;
     left: 100%;
     flex-direction: column;
     align-items: center;
@@ -53,3 +62,23 @@
     }
   }
 }
+
+// Smartphones
+// @media only screen and (max-width: 500px) {
+// }
+
+// Tablet
+// @media (min-width: 501px) and (max-width: 800px) {
+// }
+
+// Normal
+// @media (min-width: 801px) and (max-width: 1200px) {
+// }
+
+// Widescreen
+// @media (min-width: 1201px) {
+// }
+
+// Landscape
+// @media (max-height: 500px) {
+// }
