--- a/burger-menu01/styles/style.css
+++ b/burger-menu01/styles/style.css
@@ -53,15 +53,23 @@ p {
 
 .main-head {
   background: #131c27;
+  color: #ffff;
   position: -webkit-sticky;
   position: sticky;
   top: 0rem;
   z-index: 2;
 }
 
+.main-head ul a:hover {
+  background-color: #ffff;
+  color: #131c27;
+  text-decoration: underline;
+  font-weight: bold;
+  padding: 0.5rem 1.5rem;
+  border-radius: 1.5rem;
+}
+
 nav {
-  width: 90%;
-  margin: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -75,18 +83,15 @@ nav {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  width: 90%;
+  margin: auto;
+  padding: 1rem;
   min-height: 10vh;
-  padding: 2rem 0rem;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
-#logo {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 10rem;
-          flex: 1 1 10rem;
-  color: white;
-}
-
-.nav-links {
+nav ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -100,8 +105,28 @@ nav {
       -ms-flex-direction: row;
           flex-direction: row;
   -webkit-box-flex: 1;
-      -ms-flex: 1 1 20rem;
-          flex: 1 1 20rem;
+      -ms-flex: 1 1 40rem;
+          flex: 1 1 40rem;
+  list-style: none;
+}
+
+.logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 10rem;
+          flex: 1 1 10rem;
 }
 
 .burger,
@@ -110,6 +135,12 @@ nav {
 }
 
 @media screen and (max-width: 800px) {
+  html {
+    font-size: 50%;
+  }
+  .main-head {
+    width: 100%;
+  }
   .burger {
     position: relative;
     display: block;
@@ -128,7 +159,7 @@ nav {
     width: 100%;
     height: 50%;
     position: fixed;
-    top: 7rem;
+    top: 8.3rem;
     left: 100%;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
