--- a/burger-menu01/styles/_mobile.scss
+++ b/burger-menu01/styles/_mobile.scss
@@ -17,7 +17,7 @@
     cursor: pointer;
     span {
       padding: 0.2rem 2rem;
-      background: $gray-text;
+      background: $mid-color;
       margin: 0.5rem 0rem;
       display: block;
       transition: all 0.5s ease;
@@ -25,7 +25,7 @@
   }
 
   .nav-links {
-    background: $background-color;
+    background: $mid-color;
     width: 100%;
     height: 50%;
     position: fixed;
@@ -49,7 +49,7 @@
   .toggle {
     .line1 {
       transform: rotateZ(45deg) translateY(300%);
-      background: $gray-text;
+      background: $mid-color;
     }
 
     .line2 {
@@ -58,7 +58,7 @@
 
     .line3 {
       transform: rotateZ(-45deg) translateY(-300%);
-      background: $gray-text;
+      background: $mid-color;
     }
   }
 }
