--- a/019-box-model/css/style.css
+++ b/019-box-model/css/style.css
@@ -10,4 +10,10 @@ section {
   width: 300px;
   padding: 20px;
   margin-top: 20px;
+  margin-left: 20px;
+}
+
+h1 {
+  padding-top: 20px;
+  padding-left: 20px;
 }
