--- a/125-menu-v2/styles/_main.scss
+++ b/125-menu-v2/styles/_main.scss
@@ -24,19 +24,21 @@ main {
 .btn-container {
   margin-bottom: 4rem;
   @include flex(center, center, row);
-  // display: flex;
-  // justify-content: center;
 }
 
 .filter-btn {
   background: transparent;
   border-color: $color-gold;
-  font-size: 1rem;
+  // font-size: 1rem;
+  font-size: 0.8rem;
   text-transform: capitalize;
-  margin: 0 0.5rem;
-  letter-spacing: 1px;
+  // margin: 0 0.5rem;
+  margin: 0 0.3rem;
+  // letter-spacing: 1px;
+  letter-spacing: 0.8px;
   border-radius: $radius;
-  padding: 0.375rem 0.75rem;
+  // padding: 0.375rem 0.75rem;
+  padding: 0.2rem 0.4rem;
   color: $color-gold;
   cursor: pointer;
   transition: $transition;
@@ -71,8 +73,6 @@ main {
 
 .item-info header {
   @include flex(space-between, center, row);
-  // display: flex;
-  // justify-content: space-between;
   border-bottom: 0.5px dotted $color-grey-5;
 }
 
