--- a/200-monster/css/app.css
+++ b/200-monster/css/app.css
@@ -1,94 +1,119 @@
-.text-center {
+* {
+    box-sizing: border-box;
+  }
+  
+  html {
+    font-family: 'Jost', sans-serif;
+  }
+  
+  body {
+    margin: 0;
+  }
+  
+  header {
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+    padding: 0.5rem;
+    background-color: #880017;
+    color: white;
     text-align: center;
-}
-
-.healthbar {
-    width: 80%;
-    height: 40px;
-    background-color: #eee;
+    margin-bottom: 2rem;
+  }
+  
+  section {
+    width: 90%;
+    max-width: 40rem;
     margin: auto;
-    transition: width 500ms;
-}
-
-.controls, .log {
-    margin-top: 30px;
+  }
+  
+  .healthbar {
+    width: 100%;
+    height: 40px;
+    border: 1px solid #575757;
+    margin: 1rem 0;
+    background: #fde5e5;
+  }
+  
+  .healthbar__value {
+    background-color: #00a876;
+    width: 100%;
+    height: 100%;
+  }
+  
+  .container {
     text-align: center;
-    padding: 10px;
-    border: 1px solid #ccc;
-    box-shadow: 0px 3px 6px #ccc;
-}
-
-.turn {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    font-weight: bold;
-    font-size: 22px;
-}
-
-.log ul {
+    padding: 0.5rem;
+    margin: 1rem auto;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+    border-radius: 12px;
+  }
+  
+  #monster h2,
+  #player h2 {
+    margin: 0.25rem;
+  }
+  
+  #controls {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  button {
+    font: inherit;
+    border: 1px solid #88005b;
+    background-color: #88005b;
+    color: white;
+    padding: 1rem 2rem;
+    border-radius: 12px;
+    margin: 1rem;
+    width: 12rem;
+    cursor: pointer;
+    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.26);
+  }
+  
+  button:focus {
+    outline: none;
+  }
+  
+  button:hover,
+  button:active {
+    background-color: #af0a78;
+    border-color: #af0a78;
+    box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.26);
+  }
+  
+  button:disabled {
+    background-color: #ccc;
+    border-color: #ccc;
+    box-shadow: none;
+    color: #3f3f3f;
+    cursor: not-allowed;
+  }
+  
+  #log ul {
     list-style: none;
-    font-weight: bold;
-    text-transform: uppercase;
-}
-
-.log ul li {
-    margin: 5px;
-}
-
-.log ul .player-turn {
-    color: blue;
-    background-color: #e4e8ff;
-}
-
-.log ul .monster-turn {
+    margin: 0;
+    padding: 0;
+  }
+  
+  #log li {
+    margin: 0.5rem 0;
+  }
+  
+  .log--player {
+    color: #7700ff;
+  }
+  
+  .log--monster {
+    color: #da8d00;
+  }
+  
+  .log--damage {
     color: red;
-    background-color: #ffc0c1;
-}
-
-button {
-    font-size: 20px;
-    background-color: #eee;
-    padding: 12px;
-    box-shadow: 0 1px 1px black;
-    margin: 10px;
-}
-
-#start-game {
-    background-color: #aaffb0;
-}
-
-#start-game:hover {
-    background-color: #76ff7e;
-}
-
-#attack {
-    background-color: #ff7367;
-}
-
-#attack:hover {
-    background-color: #ff3f43;
-}
-
-#special-attack {
-    background-color: #ffaf4f;
-}
-
-#special-attack:hover {
-    background-color: #ff9a2b;
-}
-
-#heal {
-    background-color: #aaffb0;
-}
-
-#heal:hover {
-    background-color: #76ff7e;
-}
-
-#give-up {
-    background-color: #ffffff;
-}
-
-#give-up:hover {
-    background-color: #c7c7c7;
-}
+  }
+  
+  .log--heal {
+    color: green;
+  }
