--- a/410-input1/src/styles/_body.scss
+++ b/410-input1/src/styles/_body.scss
@@ -2,7 +2,7 @@ body {
   margin: 0;
 }
 
-.user-info {
+.user-goal {
   box-shadow: 0 2px 8px $boxColor;
   margin: 3rem auto;
   border-radius: 10px;
