--- a/430-shopping-list1/src/styles/_global.scss
+++ b/430-shopping-list1/src/styles/_global.scss
@@ -82,20 +82,20 @@ li {
 .btn-cancel {
   background: #ef5753;
   color: #fff;
-}
 
-.btn-cancel:hover {
-  background: #e3342f;
-  color: #fff;
+  &:hover {
+    background: #e3342f;
+    color: #fff;
+  }
 }
 
 .strikeout {
   text-decoration: line-through;
   color: #b8c2cc;
-}
 
-.strikeout:hover {
-  color: #8795a1;
+  &:hover {
+    color: #8795a1;
+  }
 }
 
 .priority {
